Fix #9499 - Add simple menu behavior for align-right
Fix #9499.

Add a special case for simple menu `.menu.simple` with `.align-right`.
Use `@mixin menu-simple-direction` to change the menu direction to the
right.

--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -289,6 +289,10 @@ $menu-border: $light-gray !default;
     // Simple
     &.simple {
       @include menu-simple;
+
+      &.align-#{$global-right} {
+        @include menu-simple-direction($global-right);
+      }
     }
 
     // Align right
